# rnv-text-transformer

./: .coveragerc  .gitignore  ARCHITECTURE.md  LICENSE  README.md  RNV_Text_Transformer.py  RNV_Text_Transformer.pyproj  RNV_Text_Transformer.spec  __init__.py  build_linux.sh  build_windows.bat  clean_python_cache.bat  clean_python_cache.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  test_rnv_text_transformer.py
.github/workflows/: tests.yml
cli/: __init__.py  rnv_transform.py
core/: __init__.py  batch_processor.py  diff_engine.py  export_manager.py  folder_watcher.py  preset_manager.py  regex_patterns.py  resource_loader.py  text_cleaner.py  text_statistics.py  text_transformer.py  theme_manager.py
docs/: RNV_Brand_Color_System.md  RNV_Custom_Tooltip_System.md
tests/: conftest.py  test_batch_dialog.py  test_benchmarks.py  test_cli.py  test_compare_dialog.py  test_dialogs.py  test_encoding_dialog.py  test_find_replace_dialog.py  test_logic_gap_fill.py  test_main_window.py  test_preset_dialog.py  test_properties.py  test_regex_builder_dialog.py  test_snapshots.py  test_watch_folder_dialog.py  test_widgets.py  test_workers.py  tests_README.md  tests_conftest.py
tests/__snapshots__/: test_snapshots.ambr
ui/: __init__.py  about_dialog.py  base_dialog.py  batch_dialog.py  compare_dialog.py  drag_drop_text_edit.py  encoding_dialog.py  export_dialog.py  find_replace_dialog.py  image_button.py  line_number_text_edit.py  main_window.py  preset_dialog.py  regex_builder_dialog.py  settings_dialog.py  watch_folder_dialog.py
utils/: __init__.py  async_workers.py  clipboard_utils.py  config.py  dialog_helper.py  dialog_styles.py  error_handler.py  file_handler.py  logger.py  settings_manager.py
